--- a/index.html
+++ b/index.html
@@ -25,7 +25,32 @@
 
 <body class="debug">
     <header>
+        <nav class="navbar navbar-expand">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="" class="d-block d-xl-none" alt="Logo Boolean small">
+                    <img src="" class="d-none d-xl-block" alt="Logo Boolean">
 
+                </a>
+              <form class="d-flex">
+                <input class="form-control" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
+                
+              </form>
+              <ul class="navbar-nav ms-auto my-2 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <li class="nav-item d-none d-xl-block">
+                    <a class="nav-link" href="#">Elenco</a>
+                </li>
+                <li class="nav-item d-none d-xl-block">
+                    <a class="nav-link" href="#">Guida</a>
+                </li>
+                <li class="nav-item d-none d-xl-block">
+                    <a class="nav-link" href="#">Altro</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Dropdown</a>
+                </li>
+            </div>
+          </nav>
     </header>
     <main class="d-flex">
         <aside id="sidebar" class="d-flex flex-column">
