scaffolding main content area

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="debug">
     <header>
         <!-- Top navigation bar -->
-        <nav class="navbar navbar-expand">
+        <nav class="navbar navbar-expand navbar-light bg-light">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand" href="#">
@@ -97,8 +97,32 @@
         </aside>
         <!-- /Sidebar -->
         <!-- Main content area -->
-        <section id="main-content">
+        <section id="main-content container">
+            <!-- Top functional section -->
+            <section id="functional-header">
+                <div class="row">
+                    <div class="col-md-4 col-xl-6"></div>
+                    <div class="col-md-4 col-xl-4"></div>
+                    <div class="col-md-4 col-xl-2"></div>
+                </div>
+            </section>
+            <!-- /Top functional section -->
+            <!-- Application content area -->
+            <section id="application-content">
+                <div class="row">
+                    <!-- Left column only on xl breakpoint -->
+                    <div class="col-xl-8">
 
+                    </div>
+                    <!-- /Left column only on xl breakpoint -->
+                    <!-- Right column only on xl breakpoint -->
+                    <div class="col-xl-4">
+                        
+                    </div>
+                    <!-- /Right column only on xl breakpoint -->
+                </div>
+            </section>
+            <!-- /Application content area -->
         </section>
         <!-- /Main content area -->
 
