add sidebar content

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- Sidebar -->
         <aside id="sidebar" class="d-flex flex-column">
             <!-- Top section -->
-            <div class="navigation-buttons">
+            <div class="navigation-buttons flex-grow-1">
                 <ul class="list-unstyled">
                     <a href="#">
                         <li>
@@ -83,13 +83,13 @@
                     </a>
                     <a href="#">
                         <li>
-                            <i class="fa-solid fa-house"></i>
+                            <i class="fa-solid fa-chart-simple"></i>
                             <span class="d-none d-xl-inline">Stats</span>
                         </li>
                     </a>
                     <a href="#">
                         <li>
-                            <i class="fa-solid fa-house"></i>
+                            <i class="fa-solid fa-signal"></i>
                             <span class="d-none d-xl-inline">Signals</span>
                         </li>
                     </a>
@@ -97,11 +97,15 @@
             </div>
             <!-- /Top section -->
             <!-- Setting section -->
-            <div class="setting-button mt-auto">
-                <a href="#">
-                    <i class="fa-solid fa-house"></i>
-                    <span class="d-none d-xl-inline">Admin</span>
-                </a>
+            <div class="setting-button">
+                <ul class="list-unstyled">
+                    <a href="#">
+                        <li>
+                            <i class="fa-solid fa-gear"></i>
+                            <span class="d-none d-xl-inline">Admin</span>
+                        </li>
+                    </a>
+                </ul>
             </div>
             <!-- /Setting section -->
         </aside>
