--- a/index.html
+++ b/index.html
@@ -161,24 +161,50 @@
                                 Prossime classi
                             </div>
                             <div class="card-body">
-                                <table class="table table-hover">
+                                <table id="class-table" class="table table-hover">
                                     <thead>
                                       <tr>
-                                        <th scope="col" colspan="2">Nome</th>
-                                        <th scope="col">Data Inizio</th>
-                                        <th scope="col">Roi</th>
-                                        <th scope="col">Stato</th>
-                                        <th scope="col">Azioni</th>
+                                        <th scope="col" colspan="2" class="">Nome</th>
+                                        <th scope="col" class="d-none d-md-table-cell text-center">Data Inizio</th>
+                                        <th scope="col" class="d-none d-md-table-cell text-center">Roi</th>
+                                        <th scope="col" class="text-center">Stato</th>
+                                        <th scope="col" class="text-center">Azioni</th>
                                       </tr>
                                     </thead>
                                     <tbody>
                                       <tr>
-                                        <th scope="row">F</th>
-                                        <td>Classe 75</td>
-                                        <td>15 Feb 2021</td>
-                                        <td>20%</td>
-                                        <td>tag</td>
-                                        <td>pulsante pulsante</td>
+                                        <td colspan="2">Classe 75</td>
+                                        <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
+                                        <td class="d-none d-md-table-cell text-center">20%</td>
+                                        <td class="text-center">
+                                            <span class="badge bg-success">Done</span>
+                                        </td>
+                                        <td class="text-center">
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td colspan="2">Classe 75</td>
+                                        <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
+                                        <td class="d-none d-md-table-cell text-center">20%</td>
+                                        <td class="text-center">
+                                            <span class="badge bg-warning text-dark">Process</span></td>
+                                        <td class="text-center">
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td colspan="2">Classe 75</td>
+                                        <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
+                                        <td class="d-none d-md-table-cell text-center">20%</td>
+                                        <td class="text-center">
+                                            <span class="badge bg-danger">Failed</span></td>
+                                        <td class="text-center">
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                        </td>
                                       </tr>
                                     
                                     </tbody>
