--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
                     <div class="col-xl-8">
                         <!-- Next classes-->
                         <div id="class-card" class="card mb-4">
-                            <div class="card-header">
+                            <h2 class="card-header">
                                 Prossime classi
-                            </div>
+                            </h2>
                             <div class="card-body">
                                 <table id="class-table" class="table table-hover">
                                     <thead>
@@ -214,39 +214,39 @@
                         <!-- /Next classes -->
                         <!-- FAQ -->
                         <div id="faq-card" class="card mb-4">
-                            <div class="card-header">
+                            <h5 class="card-header">
                                 F.A.Q.
-                            </div>
+                            </h5>
                             <div class="card-body">
                                 <div class="accordion accordion-flush" id="accordionFAQ">
                                     <div class="accordion-item">
-                                    <h2 class="accordion-header" id="flush-headingOne">
+                                    <h3 class="accordion-header" id="flush-headingOne">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                        Come aggiungere
+                                        Come posso aggiungere un nuovo studente?
                                         </button>
-                                    </h2>
+                                    </h3>
                                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quas adipisci voluptates praesentium distinctio quibusdam ad at est esse enim libero excepturi, quasi nesciunt, quidem consequuntur, ipsam quam saepe! Recusandae?</div>
                                     </div>
                                     </div>
                                     <div class="accordion-item">
-                                    <h2 class="accordion-header" id="flush-headingTwo">
+                                    <h3 class="accordion-header" id="flush-headingTwo">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                        Come posso
+                                        Come posso accedere alle informazioni del mio account?
                                         </button>
-                                    </h2>
+                                    </h3>
                                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                                        <div class="accordion-body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti reiciendis quidem autem odio laborum, excepturi incidunt sunt nisi, eveniet tempore modi expedita. Quasi voluptas saepe, enim totam ipsa fugit asperiores.</div>
                                     </div>
                                     </div>
                                     <div class="accordion-item">
-                                    <h2 class="accordion-header" id="flush-headingThree">
+                                    <h3 class="accordion-header" id="flush-headingThree">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                        Posso usare
+                                        Posso usare questa dashboard da mobile?
                                         </button>
-                                    </h2>
+                                    </h3>
                                     <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptates architecto voluptatibus cumque dolores aliquam inventore voluptatem quos, a omnis dolore doloribus eligendi velit quidem et nam sit numquam porro!</div>
                                     </div>
                                     </div>
                                 </div>
@@ -258,21 +258,29 @@
                     <!-- Right column only on xl breakpoint -->
                     <div class="col-xl-4">
                         <div id="todo-card" class="card mb-4">
-                            <div class="card-header">
-                                F.A.Q.
-                            </div>
+                            <h2 class="card-header">
+                                Todo
+                            </h2>
                             <div class="card-body">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="valore1" id="kickoff">
-                                    <label class="form-check-label" for="kickoff">
-                                    Default checkbox
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="valore2" id="lezione" checked>
-                                    <label class="form-check-label" for="lezione">
-                                    Checked checkbox
-                                    </label>
+                                <div class="list-group">
+                                    <div class="form-check list-group-item">
+                                        <input class="form-check-input" type="checkbox" value="valore1" id="kickoff">
+                                        <label class="form-check-label" for="kickoff">
+                                        Kickoff nuove classi
+                                        </label>
+                                    </div>
+                                    <div class="form-check list-group-item">
+                                        <input class="form-check-input" type="checkbox" value="valore2" id="lezione">
+                                        <label class="form-check-label" for="lezione">
+                                        Lezione su Bootstrap 5 in classe #89
+                                        </label>
+                                    </div>
+                                    <div class="form-check list-group-item">
+                                        <input class="form-check-input" type="checkbox" value="valore3" id="github-check">
+                                        <label class="form-check-label" for="lezione">
+                                        Controllare username github studenti
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
