adding statistic content

--- a/index.html
+++ b/index.html
@@ -252,11 +252,12 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- FAQ -->
+                        <!-- /FAQ -->
                     </div>
                     <!-- /Left column only on xl breakpoint -->
                     <!-- Right column only on xl breakpoint -->
                     <div class="col-xl-4">
+                        <!-- Todo -->
                         <div id="todo-card" class="card mb-4">
                             <h2 class="card-header">
                                 Todo
@@ -284,14 +285,29 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="statistic-card" class="card mb-4">
-                            <img src="..." class="card-img-top" alt="Graf">
-                            <ul class="list-group list-group-flush">
-                              <li class="list-group-item">An item</li>
-                              <li class="list-group-item">A second item</li>
-                              <li class="list-group-item">A third item</li>
-                            </ul>
+                        <!-- /Todo -->
+                        <!-- Statistic -->
+                        <!-- Usati due div e due card-body per riquadrare, vedere se possibile soluzione migliore -->
+                        <div class="border card">
+                            <div class="card-body">
+                                <div id="statistic-card" class="card mb-4">
+                                    <img src="img/stats.jpeg" class="card-img-top" alt="Graf">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Utenti attivi</h5>
+                                        <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Gennaio: 1200</li>
+                                        <li class="list-group-item">Febbraio: 800</li>
+                                        <li class="list-group-item">Marzo: 1500</li>
+                                    </ul>
+                                    <div class="card-body">
+                                        <a href="#" class="card-link">Visualizza report approfondito</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+                        <!-- /Statistic -->
                     </div>
                     <!-- /Right column only on xl breakpoint -->
                 </div>
