--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                                     </thead>
                                     <tbody>
                                       <tr>
-                                        <td colspan="2">Classe 75</td>
-                                        <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
+                                        <td colspan="2">Classe 89</td>
+                                        <td class="d-none d-md-table-cell text-center">16 Feb 2023</td>
                                         <td class="d-none d-md-table-cell text-center">20%</td>
                                         <td class="text-center">
                                             <span class="badge bg-success">Done</span>
@@ -185,7 +185,18 @@
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td colspan="2">Classe 75</td>
+                                        <td colspan="2">Classe 90</td>
+                                        <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
+                                        <td class="d-none d-md-table-cell text-center">20%</td>
+                                        <td class="text-center">
+                                            <span class="badge bg-success">Done</span>
+                                        <td class="text-center">
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td colspan="2">Classe 91</td>
                                         <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
                                         <td class="d-none d-md-table-cell text-center">20%</td>
                                         <td class="text-center">
@@ -196,7 +207,30 @@
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td colspan="2">Classe 75</td>
+                                        <td colspan="2">Classe 92</td>
+                                        <td class="d-none d-md-table-cell text-center">16 Feb 2023</td>
+                                        <td class="d-none d-md-table-cell text-center">20%</td>
+                                        <td class="text-center">
+                                            <span class="badge bg-danger">Failed</span></td>
+                                        </td>
+                                        <td class="text-center">
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td colspan="2">Classe 93</td>
+                                        <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
+                                        <td class="d-none d-md-table-cell text-center">20%</td>
+                                        <td class="text-center">
+                                            <span class="badge bg-warning text-dark">Process</span></td>
+                                        <td class="text-center">
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pencil"></i></button>
+                                            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td colspan="2">Classe 94</td>
                                         <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
                                         <td class="d-none d-md-table-cell text-center">20%</td>
                                         <td class="text-center">
@@ -206,7 +240,6 @@
                                             <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
                                         </td>
                                       </tr>
-                                    
                                     </tbody>
                                   </table>
                             </div>
